--- a/_posts/2023-03-27-jvm之并行gc算法.markdown
+++ b/_posts/2023-03-27-jvm之并行gc算法.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "jvm之gc算法"
+title:  "jvm之并行gc算法"
 date:   2023-03-27 09:22:07 +0000
 categories: jekyll
 tags: jvm gc
@@ -1100,14 +1100,4 @@ bool PSParallelCompact::invoke_no_policy(bool maximum_heap_compaction) {
 
     post_compact();
 }
-```
-
-### gc
-
-## G1GC
-
-### 初始化
-
-```c++
-
 ```
